--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import './app/styles/variables';
 @import './app/styles/bootstrap';
+@import './app/styles/_bootswatch';
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
