--- a/ui/src/app/components/question/question.component.html
+++ b/ui/src/app/components/question/question.component.html
@@ -1,22 +1,57 @@
 <div class="card mb-3">
   <div class="card-block">
-    <h2 class="card-title">
-    	<span *ngIf="question.title">{{question.title}}</span>
-    	<span *ngIf="!question.title">Untitled question</span>
-    	<small role="button" (click)="editing=!editing" *ngIf="question.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
-    	<small role="button" (click)="toggleDetails()">{{detailsExpander()}}</small>
-    </h2>
+    <h3 class="card-title" *ngIf="!this.question.editing">
+      <span *ngIf="question.title">{{question.title}}</span>
+      <span *ngIf="!question.title">Untitled question</span>
+      <small role="button" (click)="toggleEditing()" *ngIf="question.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
+      <small role="button" (click)="deleteQuestion()" *ngIf="question.editable"><i class="fa fa-fw fa-trash"></i></small>
+      <small role="button" (click)="toggleDetails()">{{detailsExpander()}}</small>
+    </h3>
     <div *ngIf="showDetails">
-    	<div>expire time: {{question.expire_time}}</div>
-    	<div>threshold: {{question.threshold}}</div>
-    	<div>users can add candidates: {{question.users_can_add_candidates}}</div> 
+      <h4>Details</h4>
+      <div>expire time: {{question.expire_time}}</div>
+      <div>threshold: {{question.threshold}}</div>
+      <div>users can add candidates: {{question.users_can_add_candidates}}</div>
     </div>
-    <div *ngFor="let candidate of question.candidates">
-      <h3>{{candidate.title}}</h3>
-
-      <div *ngFor="let vote of candidate.votes">
-        <h4>{{vote.vote}}</h4>
+    <form *ngIf="this.question.editing" (ngSubmit)="updateQuestion()">
+      <h3>Edit Question</h3>
+      <div class="form-group row">
+        <label class="col-md-2 col-form-label">Title</label>
+        <div class="col-md-10">
+          <input type="text" class="form-control" [(ngModel)]="question.title"
+            name="question_title" placeholder="Enter your question name...">
+        </div>
       </div>
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="checkbox" class="form-check-input" name="users_can_add_candidates"
+            [(ngModel)]="question.users_can_add_candidates"> Users can add candidates
+        </label>
+      </div>
+      <div class="form-group row">
+        <label class="col-md-2 col-form-label">Threshold: {{question.threshold}}</label>
+        <div class="col-md-10">
+          <input type="range" name="question_threshold" [value]="question.threshold"
+            class="form-control" (mouseup)="question.threshold=$event.target.value"
+            (touchend)="question.threshold=$event.target.value"
+            (input)="question.threshold=$event.target.value"
+            (value)="question.threshold" type="range"
+            min="0" max="100" step="1">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-md-2 col-form-label">Expire time: {{question.expire_time | moment}}</label>
+        <div class="col-md-10">
+          <input type="date" class="form-control" [(ngModel)]="question.expire_time"
+            name="question_threshold">
+        </div>
+      </div>
+      <button class="btn btn-primary" type="submit" role="button">Save</button>
+    </form>
+    <div *ngFor="let candidate of question.candidates">
+      <app-candidate [candidate]="candidate"></app-candidate>
     </div>
+    <button *ngIf="canCreateCandidate()" class="btn btn-primary btn-block"
+      (click)="createCandidate()" role="button"><i class="fa fa-fw fa-plus"></i>Create new candidate</button>
   </div>
 </div>
