--- a/ui/src/app/components/new-user-modal/new-user-modal.component.html
+++ b/ui/src/app/components/new-user-modal/new-user-modal.component.html
@@ -1,18 +1,21 @@
-<div bsModal #smModal="bs-modal" class="modal fade" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+<div bsModal #smModal="bs-modal" class="modal fade"
+  [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
+  aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
         <form #userForm="ngForm" (ngSubmit)="onSubmit()">
-          <div class="form-group row" [class.has-danger]="!(namev.valid || namev.pristine)">
-            <div class="col-sm-12">
-              <input id="inlineFormInput" type="text" class="form-control" required
-                    maxlength="20" pattern="[a-zA-Z0-9_-]+" [(ngModel)]="name" name="name" placeholder="Enter your name...." #namev="ngModel" >
-              <div [hidden]="namev.valid || namev.pristine" class="form-control-feedback">Name must be < 20 characters and contain no spaces.</div>
+          <div class="form-group" [class.has-danger]="!(namev.valid || namev.pristine)">
+            <div class="input-group">
+              <input id="inlineFormInput" type="text" class="form-control"
+                required maxlength="20" pattern="[a-zA-Z0-9_-]+"
+                [(ngModel)]="name" name="name" placeholder="Enter your name...."
+                #namev="ngModel">
+              <span class="input-group-btn">
+                  <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
+              </span>
             </div>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-12">
-              <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
+            <div [hidden]="namev.valid || namev.pristine" class="form-control-feedback">Name must be < 20 characters and contain no spaces.
             </div>
           </div>
         </form>
