--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -6,15 +6,14 @@
       <small role="button" (click)="toggleEditing()" *ngIf="candidate.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
       <small role="button" (click)="deleteCandidate()" *ngIf="candidate.editable"><i class="fa fa-fw fa-trash"></i></small>
     </h5>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: 25%;"
-        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%
+    <div *ngIf="!this.candidate.editing" class="progress">
+      <div class="progress-bar" role="progressbar" [style.width.%]="candidate.avg_score">Score: {{candidate.avg_score}}
       </div>
-      <input class="vote_input" [value]="myVote"
-        (mouseup)="myVote=$event.target.value"
-        (touchend)="myVote=$event.target.value"
-        (input)="myVote=$event.target.value"
-        (value)="myVote" type="range" min="0"
+      <input class="vote_input" [value]="findMyVote()" 
+      	(value)="createOrUpdateVote($event.target.value)"
+        (mouseup)="createOrUpdateVote($event.target.value)"
+        (touchend)="createOrUpdateVote($event.target.value)"
+        type="range" min="0"
         max="100" step="1" value="100" />
     </div>
     <form *ngIf="this.candidate.editing" (ngSubmit)="updateCandidate()">
