--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -5,6 +5,7 @@
       <span *ngIf="!candidate.title">Untitled candidate</span>
       <small role="button" (click)="toggleEditing()" *ngIf="candidate.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
       <small role="button" (click)="deleteCandidate()" *ngIf="candidate.editable"><i class="fa fa-fw fa-trash"></i></small>
+      <small role="button" (click)="toggleDetails()">{{detailsExpander()}}</small>
     </h5>
     <div *ngIf="!this.candidate.editing" class="progress">
       <div class="progress-bar" role="progressbar" tooltip="Average score: {{candidate.avg_score}}"
@@ -23,14 +24,24 @@
             name="candidate_title" placeholder="Enter your candidate name...">
           <span class="input-group-btn">
             <button class="btn btn-primary" type="submit" role="button">Save</button>
-            </span>
+           </span>
         </div>
       </div>
     </form>
-    <div *ngIf="true">
-      <div *ngFor="let vote of candidate.votes">
-        <h4>{{vote.user.name}} - {{vote.vote}}</h4>
-      </div>
+    <div *ngIf="showDetails">
+      <br>
+      <table class="table table-hover table-bordered table-responsive">
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Vote</th>
+          </tr>
+        </thead>
+        <tr *ngFor="let vote of candidate.votes">
+          <td><b>{{vote.user.name}}</b></td>
+          <td>{{vote.vote}}</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
