--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -40,8 +40,8 @@
       <div *ngFor="let question of poll.questions">
         <app-question [question]="question"></app-question>
       </div>
-      <button *ngIf="canCreateQuestion()" class="btn btn-primary btn-block mb-3"
-        (click)="createQuestion()" role="button"><i class="fa fa-fw fa-plus"></i>Create new question</button>
+      <button *ngIf="canCreateQuestion()" class="btn btn-secondary mb-3"
+        (click)="createQuestion()" role="button"><i class="fa fa-fw fa-plus"></i>Add a question</button>
     </div>
   </div>
   <div class="col-lg-4">
@@ -49,7 +49,6 @@
   </div>
 </div>
 <app-new-user-modal (userCreated)="userCreated()"></app-new-user-modal>
-
 <div bsModal #reconnectModal="bs-modal" class="modal fade"
   [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
   aria-labelledby="mySmallModalLabel" aria-hidden="true">
@@ -62,4 +61,3 @@
     </div>
   </div>
 </div>
-
