Fix websocket close watcher.

--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -54,9 +54,9 @@
   aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-body text-xs-center">
+      <div class="modal-body text-center">
         <p>Click to Reconnect...</p>
-        <button class="btn btn-primary" (click)="websocketReconnect()">Reconnect</button>
+        <button class="btn btn-primary" (click)="websocketReconnect()" role="button">Reconnect</button>
       </div>
     </div>
   </div>
