--- a/ui/src/app/components/poll/poll.component.html
+++ b/ui/src/app/components/poll/poll.component.html
@@ -5,9 +5,9 @@
         <h2 class="card-title" *ngIf="!this.poll.editing">
           <span *ngIf="poll.title">{{poll.title}}</span>
           <span *ngIf="!poll.title">Untitled poll</span>
-          <small role="button" (click)="toggleEditing()" *ngIf="poll.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
-          <small role="button" (click)="deletePoll()" *ngIf="poll.editable"><i class="fa fa-fw fa-trash"></i></small>
-          <small role="button" (click)="toggleDetails()">{{detailsExpander()}}</small>
+          <small role="button" (click)="toggleEditing()" *ngIf="poll.editable"><i class="fa fa-fw fa-pencil-square-o" tooltip="Edit poll"></i></small>
+          <small role="button" (click)="deletePoll()" *ngIf="poll.editable" tooltip="Delete poll"><i class="fa fa-fw fa-trash"></i></small>
+          <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
         </h2>
         <div *ngIf="showDetails">
           <h4>Details</h4>
