--- a/ui/src/app/components/question/question.component.html
+++ b/ui/src/app/components/question/question.component.html
@@ -3,9 +3,9 @@
     <h4 class="card-title" *ngIf="!this.question.editing">
       <span *ngIf="question.title">{{question.title}}</span>
       <span *ngIf="!question.title">Untitled question</span>
-      <small role="button" (click)="toggleEditing()" *ngIf="question.editable"><i class="fa fa-fw fa-pencil-square-o"></i></small>
-      <small role="button" (click)="deleteQuestion()" *ngIf="question.editable"><i class="fa fa-fw fa-trash"></i></small>
-      <small role="button" (click)="toggleDetails()">{{detailsExpander()}}</small>
+      <small role="button" (click)="toggleEditing()" *ngIf="question.editable" tooltip="Edit question"><i class="fa fa-fw fa-pencil-square-o"></i></small>
+      <small role="button" (click)="deleteQuestion()" *ngIf="question.editable" tooltip="Delete question"><i class="fa fa-fw fa-trash"></i></small>
+      <small role="button" (click)="toggleDetails()" tooltip="Show details">{{detailsExpander()}}</small>
     </h4>
     <div *ngIf="showDetails">
       <h4>Details</h4>
