--- a/ui/src/app/components/chat/chat.component.html
+++ b/ui/src/app/components/chat/chat.component.html
@@ -2,22 +2,24 @@
   <div class="card-block">
     <h5 class="card-title">Chat</h5>
     <div *ngFor="let user of poll.users">
-      <i class="fa fa-fw fa-circle" [class.text-success]="user.active" [class.text-muted]="!user.active"></i>{{user.name}}
+      <i class="fa fa-fw fa-circle" [class.text-success]="user.active" tooltip="{{user.name}} is {{getActiveString(user)}}" role="button" [class.text-muted]="!user.active"></i>{{user.name}}
     </div>
-    <hr>
-    <table class="table-hover table-responsive" id="table">
-      <tr *ngFor="let comment of poll.comments">
-        <td class="nowrap text-muted"><small>{{comment.created | moment}}</small></td>
-        <td><b class="mr-1">{{comment.user.name}}</b>
-          <span [innerHtml]="comment.comment | markdown"></span>
-        </td>
-      </tr>
-    </table>
+    <div *ngIf="poll.comments?.length">
+      <hr>
+      <table class="table-hover table-responsive" id="table">
+        <tr *ngFor="let comment of poll.comments">
+          <td class="nowrap text-muted"><small>{{comment.created | moment}}</small></td>
+          <td><b class="mr-1">{{comment.user.name}}</b>
+            <span [innerHtml]="comment.comment | markdown"></span>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
   <form>
     <div class="row">
       <div class="col-lg-12 input-group">
-        <input type="text" class="form-control square-input" [(ngModel)]="comment" name="comment">
+        <input type="text" class="form-control square-input" [(ngModel)]="comment" placeholder="Enter a comment here..." name="comment">
         <span class="input-group-btn">
             <button class="btn btn-secondary square-btn" type="submit" (click)="createComment()"><i class="fa fa-fw fa-arrow-circle-right"></i></button>
           </span>
