--- a/ui/src/app/components/candidate/candidate.component.html
+++ b/ui/src/app/components/candidate/candidate.component.html
@@ -9,9 +9,9 @@
   </p>
   <ng-template #popTemplate><div [innerHtml]="dynamicTooltip()"></div></ng-template>
   <div *ngIf="!this.candidate.editing" class="progress" [tooltip]="popTemplate">
-    <div class="progress-bar" role="progressbar" [ngClass]="progressBarStyle" [style.width.%]="candidate.avg_score">
+    <div class="progress-bar" role="progressbar" [style.background-color]="backgroundColor" [style.width.%]="candidate.avg_score">
       <span *ngIf="candidate.avg_score">
-        	Score: {{candidate.avg_score.toFixed(2)}}
+        	Score: {{candidate.avg_score.toFixed(0)}}
         </span>
     </div>
     <input class="vote_input" [value]="findMyVote()" (value)="createOrUpdateVote($event.target.value)"
